fix: add z-index:1 to modal

--- a/frontend/src/components/Modal/style.css
+++ b/frontend/src/components/Modal/style.css
@@ -1,4 +1,5 @@
 .modal {
+  z-index: 1;
   color: var(--base-color);
   position: fixed;
   left: 0;
